# plasmobar

./: .gitignore  CMakeLists.txt  LICENSE  README.md  plasma-applet-plasmobar.desktop  plasmobar.cpp  plasmobar.h  workerthread.cpp  workerthread.h
fiforeader/: CMakeLists.txt  fiforeaderengine.cpp  fiforeaderengine.h  plasma-dataengine-fiforeader.desktop  plasma-engine-fiforeader.desktop
package/: metadata.desktop
package/contents/ui/: main.qml
plasmobar/: .plasmateprojectrc  metadata.desktop
plasmobar/contents/ui/: fiforeader.js  main.qml
